fix: contrast issue

--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ button {
     font-size: 0.875rem;
     border-radius: inherit;
     background: #3abced;
-    color: #fff;
+    color: #242424;
     pointer-events: none;
     transition: all 0.35s;
     letter-spacing: 1px;
